<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user"
        style="@style/inputLayoutStyles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_user">

        <RadioButton
            android:id="@+id/rbShe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/she_her"/>

        <RadioButton
            android:id="@+id/rbHe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/he_him"/>

        <RadioButton
            android:id="@+id/rbThey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/they_them"/>

        <RadioButton
            android:id="@+id/rbNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_prefer_not_to_say"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_save"
        style="@style/buttonStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />


</androidx.constraintlayout.widget.ConstraintLayout>