<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.onboarding.screens.ThirdScreen">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_third_sc"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_rawRes="@raw/exchange"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toTopOf="@+id/glThird"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />


    <TextView
        android:id="@+id/tv_third_sc_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:text="@string/exchange_currencies"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/glThird"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glThird"
        app:layout_constraintVertical_bias="0.686" />

    <TextView
        android:id="@+id/tv_third_sc_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_you_expenses_with_multiple_currency_rate"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bt_third_sc_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glThird"
        app:layout_constraintVertical_bias="0.241"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_third_sc_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:text="@string/finish"
        style="@style/buttonStyles"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_third_sc_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>